name:                haskell-stm-warp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/emilyhorsman/haskell-stm-warp
license:             BSD3
license-file:        LICENSE
author:              Emily Horsman
maintainer:          me@emilyhorsman.com
copyright:           2018 Emily Horsman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       async >= 2.1 && < 3
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7 && < 1
                     , http-types >= 0.9 && < 1
                     , random >= 1.1 && < 2
                     , stm >= 2.4 && < 3
                     , text >= 1.2 && < 2
                     , time >= 1.6 && < 2
                     , wai >= 3.2 && < 4
                     , warp >= 3.2 && < 4
  default-language:    Haskell2010

executable haskell-stm-warp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-stm-warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emilyhorsman/haskell-stm-warp
